added image and audio

--- a/index.html
+++ b/index.html
@@ -2,19 +2,27 @@
 <head>
     <title>Trapped In a Room</title>
 </head>
+
 <body>
     <h1>Trapped In a Room</h1>
     <p>If you would like to play, press
         <a href="nextpage.html">START!</a>
+        
     </p>
 
 </body>
     <style>
         body{
-            background-color: blanchedalmond;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+            background-color: black;
+            font-family: 'Franklin Gothic Medium';
+            text-align: center;
+            color: white;
         }
 
     </style>
-
+    <audio controls loop>
+        <source src="strangedays.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+    <img src="creepyroom.jpg" width:100px>
 </html>
